# playmaster

./: .gitignore  .releaserc.yaml  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: integration-test.yml  release.yaml  rust-ci.yml
sample_app/: pubspec.yaml  test_controller.yaml
sample_app/feature_test/: ftue.test.yaml
sample_app/integration_test/: login_test.dart
sample_app/lib/: main.dart
sample_app/test_features/: ftue.test.yaml
samples/flutter_sample_app/: .gitignore  playmaster.yaml  pubspec.yaml
samples/flutter_sample_app/feature_test/: common.vars.yaml  ftue.test.yaml
samples/flutter_sample_app/lib/: main.dart
samples/flutter_sample_app/test_driver/: integration_test.dart
src/: config.rs  main.rs  run.rs
src/code_gen/: code_gen.rs  gen.rs  gen_flutter.rs  gen_iface.rs  mod.rs
src/code_gen/flutter/: dbus.rs  entrypoint.rs  helper.rs  mod.rs  test_driver.rs  utils.rs  vars.rs
src/code_run/: code_run.rs  mod.rs  run.rs  run_flutter.rs  run_iface.rs
src/gmail/: client.rs  imap_client.rs  mod.rs  s3_storage.rs
src/hooks/: check_dependency.rs  connect.rs  custom.rs  iface.rs  mod.rs  results.rs  setup_state.rs
src/linux/utils/: command.rs  mod.rs  os.rs
src/linux/utils/installer/: common.rs  file.rs  mod.rs  package.rs
src/models/: app_state.rs  args.rs  config.rs  config_flutter.rs  feature_test.rs  gen_state.rs  mod.rs  vars.rs
src/schemas/: schema_gen.rs
src/utils/: command.rs  dbus.rs  dir.rs  errors.rs  execution.rs  file_logger.rs  flutter.rs  logger.rs  mod.rs  os.rs  semver.rs  shlex.rs  string.rs  variables.rs
src/utils/downloader_def/: downloader.rs  mod.rs  trait.rs
src/utils/downloader_def/providers/: bitbucket.rs
src/utils/serializers/: date_serializer.rs
testing/: Dockerfile.fedora  Dockerfile.gameos
