[package]
name = "simple_test_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
which = "6"
semver = "1"
inquire = "0.7"
shlex = "1.3.0"
regex = "1.11.3"
lazy_static = "1.5.0"
prctl = "1.0.0"
dirs = "6.0.0"
chrono = "0.4.42"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
serde_json = "1.0.145"
indicatif = "0.18.0"
