[package]
name = "playmaster"
version = "1.1.1"
edition = "2024"
license = "MIT"
description = "CLI tool to facilitate generation of test code from YAML feature files and running them either locally or remotely"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/playmaster", dest = "/usr/bin/playmaster", mode = "755" }
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
which = "6"
semver = "1"
inquire = "0.7"
shlex = "1.3.0"
regex = "1.11.3"
lazy_static = "1.5.0"
prctl = "1.0.0"
dirs = "6.0.0"
chrono = "0.4.42"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
serde_json = "1.0.145"
indicatif = "0.18.0"
schemars = "1.0.4"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
thiserror = "2.0.17"
ssh2 = "0.9.5"
uuid = { version = "1.18.1", features = ["v4"] }
scopeguard = "1.2.0"
terminal_size = "0.4.3"
tempfile = "3.23.0"
rand = "0.9.2"
signal-hook = "0.3.18"

[dev-dependencies.cargo-husky]
version = "1.1.1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
